--- a/books/templates/books/index.html
+++ b/books/templates/books/index.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="flex sm:flex-col items-center sm:items-end justify-between">
                     <div>
-                        <a href="{% url 'wishlist' %}" class="block aspect-1 rounded-full drop-shadow-lg  bg-white  hover:bg-yellow-500 transition-all
+                        <a href="{% url 'add' book.pk %}" class="block aspect-1 rounded-full drop-shadow-lg  bg-white  hover:bg-yellow-500 transition-all
                              p-2.5 group">
 
                             <svg width="30" height="30" viewBox="0 0 25 25">
