--- a/wishlist/templates/wishlist/index.html
+++ b/wishlist/templates/wishlist/index.html
@@ -2,63 +2,70 @@
 
 
 {% block content %}
-<!-- <div class="flex justify-center items-center min-h-screen text-xl font-bold">
-    <h1>These are books in your wishlist</h1>
-</div> -->
 
-<div class="flex justify-center pt-10 items-center text-5xl font-bold">
-    <h1>Hello, {{ user.name }}! This is your wishlist page 📚✨</h1>
-</div>
+<div class="container min-h-screen">
+    <div
+        class="flex justify-center pt-10 items-center text-xl sm:text-3xl lg:text-4xl xl:text-5xl text-center font-bold">
+        <h1>Hello, {{ user.name }}! This is your wishlist page 📚✨</h1>
+    </div>
 
-<div class="container flex flex-wrap py-10 px-12 gap-10">
-{% for wishlist in wishlists %}
-<!-- <div class="grid grid-cols-4"> -->
-<div class="flex flex-col text-gray-700 bg-white shadow-md w-96 rounded-xl bg-clip-border">
-    <div class="flex flex-col items-center w-min gap-1 mt-6 mx-6">
-        <div class="w-40">
-            <img
-                src="{{ wishlist.books.image_url }}"
-                alt="img-blur-shadow"
-                layout="fill"
-            />
+    <div class="container  flex flex-wrap py-10 px-12 gap-10">
+
+        {% if wishlist %}
+        {% for wishlist in wishlists %}
+        <!-- <div class="grid grid-cols-4"> -->
+        <div class="flex flex-col text-gray-700 bg-white shadow-md w-96 rounded-xl bg-clip-border">
+            <div class="flex flex-col items-center w-min gap-1 mt-6 mx-6">
+                <div class="w-40">
+                    <img src="{{ wishlist.books.image_url }}" alt="img-blur-shadow" layout="fill" />
+                </div>
+            </div>
+            <div class="p-6">
+                <h5
+                    class="block mb-2 font-sans text-xl antialiased font-semibold leading-snug tracking-normal text-blue-gray-900">
+                    {{ wishlist.books.title }}
+                </h5>
+                <p class="block font-sans text-base antialiased font-light leading-relaxed text-inherit">
+                    {{ wishlist.note }}
+                </p>
+            </div>
+            <div class="p-6 pt-0">
+
+                <a href="{% url 'remove' wishlist.pk %}">
+                    <button
+                        class="select-none rounded-lg hover:bg-red-500  bg-red-600 py-3 px-6 text-center align-middle font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none mt-5"
+                        type="submit" data-ripple-light="true">
+                        Remove
+                    </button>
+                </a>
+
+
+                <a href="{% url 'edit' wishlist.pk %}">
+                    <button
+                        class="select-none rounded-lg hover:bg-green-600  bg-[#00635D] py-3 px-6 text-center align-middle font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none mt-5 mx-2"
+                        type="button" data-ripple-light="true">
+                        Edit Note
+                    </button>
+
+                </a>
+
+            </div>
         </div>
-    </div>
-    <div class="p-6">
-      <h5 class="block mb-2 font-sans text-xl antialiased font-semibold leading-snug tracking-normal text-blue-gray-900">
-        {{ wishlist.books.title }}
-      </h5>
-      <p class="block font-sans text-base antialiased font-light leading-relaxed text-inherit">
-        {{ wishlist.note }}
-      </p>
-    </div>
-    <div class="p-6 pt-0">
+        <!-- </div> -->
+        {% endfor %}
+        {% else %}
+        <div class="flex justify-center items-center w=full"><span class="text-center block text-lg italic">Belum ada
+                wishlist
+                :(
+                Silahkan
+                pergi ke
+                halaman buku untuk
+                menambahkan
+                wishlist</span></div>
+        {% endif %}
 
-        <a href="{% url 'remove' wishlist.pk %}">
-        <button
-        class="select-none rounded-lg hover:bg-red-500 text-white bg-red-600 py-3 px-6 text-center align-middle font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none mt-5"
-        type="submit"
-        data-ripple-light="true"
-        >
-        Remove
-        </button>
-        </a>
-
-        
-        <a href="{% url 'edit' wishlist.pk %}">
-      <button
-        class="select-none rounded-lg hover:bg-green-600 text-white bg-[#00635D] py-3 px-6 text-center align-middle font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none mt-5 mx-2"
-        type="button"
-        data-ripple-light="true"
-      >
-        Edit Note
-      </button>
-
-    </a>
 
     </div>
-  </div>
-  <!-- </div> -->
-  {% endfor %}
 </div>
 
 <script>
