--- a/wishlist/templates/wishlist/index.html
+++ b/wishlist/templates/wishlist/index.html
@@ -1,5 +1,15 @@
 {% extends 'base.html' %}
 
+<!-- <style>
+.popup {
+    visibility: hidden;
+}
+
+
+.open-popup {
+    visibility: visible;
+}
+</style> -->
 
 {% block content %}
 <!-- <div class="flex justify-center items-center min-h-screen text-xl font-bold">
@@ -35,9 +45,11 @@
 
         <a href="{% url 'remove' wishlist.pk %}">
         <button
+        id="removeBtn"
         class="select-none rounded-lg hover:bg-red-500 text-white bg-red-600 py-3 px-6 text-center align-middle font-sans text-xs font-bold uppercase text-white shadow-md shadow-pink-500/20 transition-all focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none mt-5"
         type="submit"
         data-ripple-light="true"
+        onclick="openPopup()"
         >
         Remove
         </button>
@@ -59,27 +71,61 @@
   </div>
   <!-- </div> -->
   {% endfor %}
+
+  <!-- <div class="popup" id="popup-modal" tabindex="-1" class="fixed top-0 left-0 right-0 z-50 hidden p-4 overflow-x-hidden overflow-y-auto md:inset-0 h-[calc(100%-1rem)] max-h-full">
+    <div class="relative w-full max-w-md max-h-full">
+        <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+            <button type="button" class="absolute top-3 right-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ml-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="popup-modal">
+                <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                </svg>
+                <span class="sr-only">Close modal</span>
+            </button>
+            <div class="p-6 text-center">
+                <svg class="mx-auto mb-4 text-gray-400 w-12 h-12 dark:text-gray-200" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
+                </svg>
+                <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Are you sure you want to delete this product?</h3>
+                <button data-modal-hide="popup-modal" type="submit" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center mr-2">
+                    Yes, I'm sure
+                </button>
+                <button data-modal-hide="popup-modal" type="button" class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600">No, cancel</button>
+            </div>
+        </div>
+    </div>
+</div> -->
 </div>
 
-<script>
+<!-- <script>
 
-</script>
+</script> -->
+<!-- <script>
+const removeBtn = document.getElementById("removeBtn");
+const modal = document.getElementById("popup-modal")
+removeBtn.addEventListener("click", () => {
+    modal.showModal();
+});
+// let popup = document.getElementById("popup-modal");
+// function openPopup() {
+//     popup.classList.add("open-popup");
+// }
+</script> -->
 
-<!-- <div class="container flex py-6 px-12 gap-6">
-    <div class="w-3/4 flex flex-col gap-3">
-        <div class="flex w-full bg-white p-4 border gap-4 items-center">
-            {% for wishlist in wishlists %}
-            <a href="#" class="flex flex-col items-center w-min gap-1">
-                <div class="w-40 ">
-                    <img src="{{ wishlist.books.image_url }}" alt="Gambar buku" class="border mx-auto">
-                </div>
-            </a>
+// <!-- <div class="container flex py-6 px-12 gap-6">
+//     <div class="w-3/4 flex flex-col gap-3">
+//         <div class="flex w-full bg-white p-4 border gap-4 items-center">
+//             {% for wishlist in wishlists %}
+//             <a href="#" class="flex flex-col items-center w-min gap-1">
+//                 <div class="w-40 ">
+//                     <img src="{{ wishlist.books.image_url }}" alt="Gambar buku" class="border mx-auto">
+//                 </div>
+//             </a>
 
-            <p>{{ wishlist.note }}</p>
-            <a href="#" class="hover:bg-red-500 text-white bg-red-600 rounded-full h-fit py-1.5 px-4">Remove</a>
-            <a href="#" class="hover:bg-green-600 text-white bg-[#00635D] rounded-full h-fit py-1.5 px-4">Edit</a>
-            {% endfor %}
-        </div>
-    </div> -->
+//             <p>{{ wishlist.note }}</p>
+//             <a href="#" class="hover:bg-red-500 text-white bg-red-600 rounded-full h-fit py-1.5 px-4">Remove</a>
+//             <a href="#" class="hover:bg-green-600 text-white bg-[#00635D] rounded-full h-fit py-1.5 px-4">Edit</a>
+//             {% endfor %}
+//         </div>
+//     </div> -->
 
 {% endblock content %}
