--- a/readme/templates/readme/profile.html
+++ b/readme/templates/readme/profile.html
@@ -14,7 +14,7 @@
                         <a href="{% url 'wishlist' %}"
                             class="bg-[#00635D] text-white py-2 px-2 rounded-full text-center">Lihat
                             Wishlist</a>
-                        <a href="{% url 'shop' %}"
+                        <a href="{% url 'bookshelf' %}"
                             class="bg-[#003f63] text-white py-2 px-2 rounded-full text-center">Lihat
                             Buku yang Dibeli</a>
                     </div>
