--- a/shop/templates/shop/shop-item-detail.html
+++ b/shop/templates/shop/shop-item-detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="container flex gap-10 max-w-screen-xl py-6">
+<div class="container min-h-screen flex gap-10 max-w-screen-xl py-6">
     <div class="w-1/4 flex flex-col gap-4">
         <div class="w-full px-10"><img src="{{ item.book.image_url }}" class="w-full drop-shadow-lg" alt="Cover"></div>
         <div class="flex flex-col items-center gap-2">
@@ -22,8 +22,11 @@
             {% else %}
             <form method="POST">
                 {% csrf_token %}
-                <input placeholder="Amount" class="border-2 py-2 mb-2 text-center justify-center w-full border-[#fbbd61] rounded-full" type="number" name="amount" required="" id="id_amount">
-                <input type="submit" name="submit" value="Add To Cart" class="bg-[#fbbd61] hover:bg-[#af8445] text-white text-center rounded-full w-full py-2 px-4" >
+                <input placeholder="Amount"
+                    class="border-2 py-2 mb-2 text-center justify-center w-full border-[#fbbd61] rounded-full"
+                    type="number" name="amount" required="" id="id_amount">
+                <input type="submit" name="submit" value="Add To Cart"
+                    class="bg-[#fbbd61] hover:bg-[#af8445] text-white text-center rounded-full w-full py-2 px-4">
             </form>
             {% endif %}
         </div>
@@ -65,7 +68,8 @@
 </div>
 
 {% if user.is_authenticated %}
-<a class="fixed bottom-0 right-0 mr-12 mb-12 bg-[#fbbd61] hover:bg-[#af8445] rounded-full py-2 px-4 shadow-xl drop-shadow-xl" href="{% url 'cart' %}">
+<a class="fixed bottom-0 right-0 mr-12 mb-12 bg-[#fbbd61] hover:bg-[#af8445] rounded-full py-2 px-4 shadow-xl drop-shadow-xl"
+    href="{% url 'cart' %}">
     <img class="h-10 w-10" src="{% static 'shop/img/cart.svg' %}" alt="shopping cart">
 </a>
 {% endif %}
@@ -74,13 +78,13 @@
 
 <script>
     function addToCart(item_id) {
-        fetch(`../../add-to-cart/${item_id}/`, {method: "POST"}).then(response => {
+        fetch(`../../add-to-cart/${item_id}/`, { method: "POST" }).then(response => {
             message = document.getElementById("message");
             message.innerHTML = `<div class="flex ${response.ok ? "bg-green-100 border-green-500 text-green-500" : "bg-red-100 border-red-500 text-red-500"} rounded-full border-2">
                 <div class="w-16">
                     <div class="p-4">
                         ${response.ok ? "<img class=\"h-8 w-8\" src=\"{% static 'shop/img/check-mark.svg' %}\" alt=\"check mark\">"
-                        : "<img class=\"h-8 w-8 fill-current\" src=\"{% static 'shop/img/x-mark.svg' %}\" alt=\"X mark\">"}
+                    : "<img class=\"h-8 w-8 fill-current\" src=\"{% static 'shop/img/x-mark.svg' %}\" alt=\"X mark\">"}
                     </div>
                 </div>
                 <div class="w-auto items-center py-4 pr-4">
@@ -88,9 +92,9 @@
                         ${response.ok ? "Book added to cart successfully!" : response.status == 400 ? "Not enough item" : "Can't add book to cart! Login first!"}
                     </span>
                 </div>
-            </div>`
-            setTimeout(() => {message.innerHTML = ""}, 3000);
-        })
+            </div>`;
+            setTimeout(() => { message.innerHTML = ""; }, 3000);
+        });
     }
 </script>
 {% endblock content %}
