--- a/quotes/templates/quotes/create_quotes.html
+++ b/quotes/templates/quotes/create_quotes.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="max-w-xl mx-auto mt-3">
+<div class="max-w-xl mx-auto mt-3 min-h-screen">
     <div class="bg-orange-200 rounded-lg shadow-lg p-6">
         <h5 class="text-2xl font-bold mb-4 text-center">Tambahkan Quotes ke Dalam Daftar Kamu!</h5>
-        <p class="text-center font-semibold text-red-500">PILIH USER SESUAI DENGAN NAMA USERNAMEMU!!!</p>
 
         <form method="POST">
             {% csrf_token %}
@@ -13,7 +12,8 @@
                 <tr>
                     <td></td>
                     <td class="flex justify-center items-center text-center">
-                        <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                        <button type="submit"
+                            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
                             Tambahkan Quotes
                         </button>
                     </td>
