--- a/books/templates/books/index.html
+++ b/books/templates/books/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="flex flex-col items-center gap-6">
+<div class="flex flex-col items-center gap-6 min-h-screen">
     <div class="bg-gray-300 py-20 relative flex w-full flex-col gap-10 px-4">
         <img src="{% static 'books/img/books.jpg' %}"
             class="object-cover absolute top-0 left-0 w-full h-full brightness-50" alt="">
