--- a/shop/templates/shop/shop-item-detail.html
+++ b/shop/templates/shop/shop-item-detail.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% block content %}
-<div class="container min-h-screen flex gap-10 max-w-screen-xl py-6">
-    <div class="w-1/4 flex flex-col gap-4">
+<div class="container flex flex-col md:flex-row gap-10 max-w-screen-xl py-6">
+    <div class="w-full max-w-xs mx-auto md:w-2/5 lg:w-1/4 flex flex-col gap-4">
         <div class="w-full px-10"><img src="{{ item.book.image_url }}" class="w-full drop-shadow-lg" alt="Cover"></div>
         <div class="flex flex-col items-center gap-2">
             <div class="flex justify-center gap-2 w-full">
@@ -31,7 +31,7 @@
             {% endif %}
         </div>
     </div>
-    <div class="w-3/4 flex flex-col gap-7">
+    <div class="md:w-3/5 lg:w-3/4 flex flex-col gap-7">
         <div class="flex flex-col gap-3">
             <div class="flex flex-col gap-2">
                 <div class="flex flex-col gap-2">
