--- a/wishlist/templates/wishlist/form.html
+++ b/wishlist/templates/wishlist/form.html
@@ -5,27 +5,34 @@
 
 <form method="POST" action="">
     {% csrf_token %}
-    <div class="container flex py-6 px-12 gap-6 justify-center items-center">
-        <div class="w-3/4 flex flex-col gap-3">
-            <div class="flex w-full bg-white p-4 border gap-4 items-center">
-                
+    <div class="w-full min-h-screen">
+        <div class="container  min-h-screen flex py-6 px-12 gap-6 justify-center items-center">
+            <div class="w-3/4 flex flex-col gap-3">
+                <div class="flex w-full bg-white p-4 border gap-4 items-center">
 
-    <div class="w-full mb-4 border border-gray-100 rounded-lg bg-gray-100">
-        <div class="px-4 py-2 bg-white rounded-t-lg">
-            <label for="note" class="sr-only">Your comment</label>
-            <textarea id="note" name="note" rows="4" class="w-full px-0 text-sm text-gray-900 bg-white border-0  focus:ring-0" placeholder="Write a comment..." required>{{form.note.value}}</textarea>
-        </div>
-        <div class="flex items-center justify-between px-3 py-2 border-t">
-            <button type="submit" class="inline-flex items-center py-2.5 px-4 text-xs font-medium text-center hover:bg-red-500 text-white bg-red-600 rounded-lg focus:ring-4 focus:ring-red-600">
-                Cancel
-            </button>
-            <input type="submit" class="inline-flex items-center py-2.5 px-4 text-xs font-medium text-center text-white bg-blue-700 rounded-lg focus:ring-4 focus:ring-blue-200 dark:focus:ring-blue-900 hover:bg-blue-800" value="Confirm">
-        </div>
-    </div>
-    <p class="ml-auto text-xs text-black">Type note for this book.</p>
+                    <div class="w-full mb-4 border border-gray-100 rounded-lg bg-gray-100">
+                        <div class="px-4 py-2 bg-white rounded-t-lg">
+                            <label for="note" class="sr-only">Your comment</label>
+                            <textarea id="note" name="note" rows="4"
+                                class="w-full px-0 text-sm text-gray-900 bg-white border-0  focus:ring-0"
+                                placeholder="Write a comment..."
+                                required>{% if form.note.value %}{{form.note.value}}{% endif %}</textarea>
+                        </div>
+                        <div class="flex items-center justify-between px-3 py-2 border-t">
+                            <button type="submit"
+                                class="inline-flex items-center py-2.5 px-4 text-xs font-medium text-center hover:bg-red-500 text-white bg-red-600 rounded-lg focus:ring-4 focus:ring-red-600">
+                                Cancel
+                            </button>
+                            <input type="submit"
+                                class="inline-flex items-center py-2.5 px-4 text-xs font-medium text-center text-white bg-blue-700 rounded-lg focus:ring-4 focus:ring-blue-200 dark:focus:ring-blue-900 hover:bg-blue-800"
+                                value="Confirm">
+                        </div>
+                    </div>
+                    <p class="ml-auto text-xs text-black">Type note for this book.</p>
+                </div>
             </div>
         </div>
-    
+
 </form>
 
 
