--- a/shop/templates/shop/shop-item-detail.html
+++ b/shop/templates/shop/shop-item-detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="container flex flex-col md:flex-row gap-10 max-w-screen-xl py-6">
+<div class="container flex min-h-screen flex-col md:flex-row gap-10 max-w-screen-xl py-6">
     <div class="w-full max-w-xs mx-auto md:w-2/5 lg:w-1/4 flex flex-col gap-4">
         <div class="w-full px-10"><img src="{{ item.book.image_url }}" class="w-full drop-shadow-lg" alt="Cover"></div>
         <div class="flex flex-col items-center gap-2">
