build tailwind manually

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
-{% load static tailwind_tags %}
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -17,7 +17,8 @@
             href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap"
             rel="stylesheet">
         <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}">
-        {% tailwind_css %}
+        <link rel="stylesheet" type='text/css' href="{% static 'styles.css' %}">
+
     </head>
 
     <body class="font-Lato bg-[#F9F7F4]  min-h-screen">
