--- a/readme/templates/readme/index.html
+++ b/readme/templates/readme/index.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <div class="container flex-col-reverse lg:flex-row flex py-6 sm:px-12 px-4 gap-6">
-    <div class="lg:w-3/4 flex flex-col gap-3">
+    <div class="lg:w-3/4 min-h-screen flex flex-col gap-3">
         <hr class="border-2 lg:hidden">
         <h2 class="font-semibold lg:hidden">POST</h2>
         {% if posts %}
